[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/level/terrain/Bridge.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 576, 480 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 480, 46.75 )

[node name="Bridge" type="Node2D"]
script = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 960, 0, 960, 960, 0, 960 )

[node name="Detect" type="Node2D" parent="."]

[node name="DetectHor" type="Area2D" parent="Detect"]
position = Vector2( 480, 480 )
z_as_relative = false
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect/DetectHor"]
shape = SubResource( 1 )

[node name="DetectVer" type="Area2D" parent="Detect"]
position = Vector2( 480, 480 )
rotation = -1.57079
z_as_relative = false
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect/DetectVer"]
shape = SubResource( 1 )

[node name="HorizontalWalls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="HorizontalWalls"]
position = Vector2( 480, -112 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizontalWalls/StaticBody2D"]
position = Vector2( 0, 62.75 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="HorizontalWalls"]
position = Vector2( 480, 1008 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HorizontalWalls/StaticBody2D2"]
shape = SubResource( 2 )

[node name="VerticalWalls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="VerticalWalls"]
position = Vector2( -48, 480 )
rotation = -1.57079
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalWalls/StaticBody2D"]
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="VerticalWalls"]
position = Vector2( 1008, 480 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalWalls/StaticBody2D2"]
rotation = -1.57079
shape = SubResource( 2 )

[connection signal="body_entered" from="Detect/DetectHor" to="." method="_on_DetectHor_body_entered"]
[connection signal="body_exited" from="Detect/DetectHor" to="." method="_on_DetectHor_body_exited"]
[connection signal="body_entered" from="Detect/DetectVer" to="." method="_on_DetectVer_body_entered"]
[connection signal="body_exited" from="Detect/DetectVer" to="." method="_on_DetectVer_body_exited"]
